--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
       </nav>
     </header>
+
     <!-- banner-section -->
     <section class="banner" id="#home">
       <div class="container">
@@ -72,7 +73,7 @@
               <h1 class="fw-bold ">
                 I'am <span class="color">Abhishek <br> Thakur</span>
               </h1>
-              <h2 class="fw-bold py-3">Web Developer</h2>
+              <h2 class="fw-bold py-3">Web Designer</h2>
               <a href="#work"><button class="text-white rounded-5 bg-black text-uppercase border-1 border-white px-4 py-2 ">my works</button></a>
             </div>
           </div>
@@ -84,6 +85,7 @@
         </div>
       </div>
     </section>
+
     <!-- about-section -->
      <section class="about py-5" id="#about">
       <div class="container">
@@ -99,7 +101,7 @@
        <div class="col-12 col-lg-6">
         <div class="about-para ">
         <h2 class="fw-bold pt-3 pt-lg-0">I'am Abhishek Thakur</h2>
-        <p>Hi, I'm Abhishek Thakur a Front-End Developer. I specialize in building responsive and dynamic user interfaces using technologies like HTML, CSS along with frameworks such as  Bootstrap.I'm committed to writing clean, efficient, and maintainable code.</p>
+        <p>Hi, I'm Abhishek Thakur a Web Designer. I specialize in building responsive and dynamic user interfaces using technologies like HTML, CSS along with frameworks such as  Bootstrap.I'm committed to writing clean, efficient, and maintainable code.</p>
        </div>
       </div>
      </div>
@@ -161,6 +163,7 @@
      </div>
   </div>
 </section>
+
 <!-- work-section -->
 <section class="work py-5" id="work">
   <div class="container">
@@ -171,24 +174,28 @@
       <div class="col-12">
         <div class="d-flex flex-wrap gap-3">
         <div class="work-img">
-          <img src="images/ht1.png" alt="">
+          <a href=" https://abhi-thakur01.github.io/mockup1/" target="_blank"><img src="images/ht1.png" alt=""></a>
         </div>
         <div class="work-img">
-          <img src="images/ht2.png" alt="">
+          <!-- mockup git-4 -->
+       <a href="https://abhi-thakur01.github.io/mockup-4/" target="_blank"> <img src="images/Screenshot 2025-03-22 120153.png" alt=""></a>
         </div>
         <div class="work-img">
-          <img src="images/bot1.png" alt="">
+          <a href="https://abhi-thakur01.github.io/bootstrap-mockup-1/" target="_blank"><img src="images/bot1.png" alt=""></a>
         </div>
         <div class="work-img">
-          <img src="images/bot2.png" alt="">
+          <a href="https://abhi-thakur01.github.io/bootstrap-mockup-2/" target="_blank"><img src="images/Screenshot 2025-03-22 121123.png" alt=""></a>
+        </div>
+        <div class="work-img">
+          <a href="https://abhi-thakur01.github.io/bootstrap-mockup-2/" target="_blank"><img src="images/bot2.png" alt=""></a>
         </div>
       </div>
     </div>
      </div>
      </div>
 </section>
+
  <!-- contact-section -->
-  
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
