--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
+
     <!-- bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,6 +14,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+
     <!-- font awsom cdn -->
     <link
       rel="stylesheet"
@@ -22,9 +24,12 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
+
     <!-- header -->
     <header>
+
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg py-2">
         <div class="container">
@@ -52,10 +57,7 @@
                 <a class="nav-link px-4 fw-bold" href="#skills">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4 fw-bold" href="#work">Work</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link px-4 fw-bold" href="#contact">Contact</a>
+                <a class="nav-link px-4 fw-bold" href="#projects">Projects</a>
               </li>
             </ul>
           </div>
@@ -64,7 +66,7 @@
     </header>
 
     <!-- banner-section -->
-    <section class="banner" id="#home">
+    <section class="banner" id="home">
       <div class="container">
         <div class="row justify-content-between align-items-center ">
           <div class="col-12 col-lg-6  order-last  order-lg-first">
@@ -87,7 +89,7 @@
     </section>
 
     <!-- about-section -->
-     <section class="about py-lg-5 py-3" id="#about">
+     <section class="about py-lg-5 py-3" id="about">
       <div class="container">
      <div class="about-heading text-center">
       <h1 class="fw-bold pb-lg-5 pb-3 headings">About Me</h1>
@@ -107,8 +109,9 @@
      </div>
     </div>
      </section>
+
      <!--skills-section  -->
-<section class="skill py-lg-5 py-3" id="skill">
+<section class="skill py-lg-5 py-3" id="skills">
   <div class="container">
     <div class="skill-heading text-center ">
       <h1 class="fw-bold pb-lg-5 pb-3 headings">Skills</h1>
@@ -165,7 +168,7 @@
 </section>
 
 <!-- work-section -->
-<section class="work py-5" id="work">
+<section class="project py-5" id="projects">
   <div class="container">
     <div class="work-heading text-center ">
       <h1 class="fw-bold pb-2 headings">Projects</h1>
